[package]
name = "oxicleaner"
version = "0.1.0"
edition = "2021"
description = "Recursive Rust target/ cleaner with launchd scheduling"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[profile.release]
lto = true
codegen-units = 1
