[package]
name = "oxicleaner"
version = "0.2.0"
edition = "2021"
description = "Recursive Rust target/ cleaner with launchd scheduling"
license = "MIT"
repository = "https://github.com/a7garden/oxicleaner"
homepage = "https://github.com/a7garden/oxicleaner"
documentation = "https://github.com/a7garden/oxicleaner#readme"
readme = "README.md"
keywords = ["cargo", "cargo-sweep", "target", "cleanup", "launchd"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
inquire = "0.9"

[profile.release]
lto = true
codegen-units = 1
